# entra-id-gen-exp

./: .env.example  EntraSim_End_to_End_Demo_Guide.md  PULL_REQUEST_SUMMARY.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  pyproject.toml  run_tests.py  sample_company.json
entrasim/: __init__.py  __main__.py  azure_client.py  cli.py  config.py  core.py  models.py
specs/: design_specification.md  software_requirements_specification.md
tests/: README.md  __init__.py  conftest.py  utils.py
tests/fixtures/: __init__.py  invalid_company.json  minimal_company.json  test_company.json
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_azure_client.py  test_cli.py  test_config.py  test_core.py  test_models.py
